[gd_scene load_steps=3 format=3 uid="uid://dw8nm32tfidi8"]

[ext_resource type="Script" uid="uid://cbuxfnx04nekv" path="res://scripts/ui/ShopScreen.gd" id="1_shop"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(0.15, 0.15, 0.2, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ShopScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TopBar" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="VBoxContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚Üê ËøîÂõû"

[node name="TitleLabel" type="Label" parent="VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 36
text = "ÂïÜÂüé"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrencyContainer" type="HBoxContainer" parent="VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="GoldLabel" type="Label" parent="VBoxContainer/TopBar/HBoxContainer/CurrencyContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_font_sizes/font_size = 24
text = "üí∞ ÈáëÂπ£: 1000"
vertical_alignment = 1

[node name="GemLabel" type="Label" parent="VBoxContainer/TopBar/HBoxContainer/CurrencyContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 24
text = "üíé ÂØ∂Áü≥: 50"
vertical_alignment = 1

[node name="TabContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ShopItemsGrid" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 4
