# ShopScreen.gd
# å•†åº—ç•Œé¢æ§åˆ¶å™¨ - æ¨¡çµ„åŒ–ç‰ˆæœ¬
extends Control

# ==================== ç¯€é»å¼•ç”¨ ====================
@onready var back_button = $VBoxContainer/TopBar/HBoxContainer/BackButton
@onready var gold_label = $VBoxContainer/TopBar/HBoxContainer/CurrencyContainer/GoldLabel
@onready var gem_label = $VBoxContainer/TopBar/HBoxContainer/CurrencyContainer/GemLabel
@onready var tab_container = $VBoxContainer/TabContainer
@onready var shop_items_grid = $VBoxContainer/ScrollContainer/ShopItemsGrid

# ç•¶å‰é¸ä¸­çš„æ¨™ç±¤
var current_tab: String = ""

# å¾JSONè¼‰å…¥çš„é…ç½®
var shop_tabs: Array = []  # å•†åŸæŒ‰éˆ•é…ç½®
var tab_buttons: Dictionary = {}  # æŒ‰éˆ•ID -> Buttonç¯€é»
var shop_items: Array = []
var items_by_category: Dictionary = {}

# JSONé…ç½®æ–‡ä»¶è·¯å¾‘
const SHOP_CONFIG_PATH = "res://data/config/shop_config.json"
const SHOP_ITEMS_PATH = "res://data/config/shop_items.json"

# ==================== åˆå§‹åŒ– ====================
func _ready():
	print("ğŸª å•†åº—ç•Œé¢è¼‰å…¥ï¼ˆæ¨¡çµ„åŒ–ç‰ˆæœ¬ï¼‰")

	# è¼‰å…¥é…ç½®
	load_shop_tab_config()
	load_shop_items_config()

	# é€£æ¥æŒ‰éˆ•ä¿¡è™Ÿ
	back_button.pressed.connect(_on_back_pressed)

	# å‰µå»ºå•†åŸæŒ‰éˆ•
	create_tab_buttons()

	# æ›´æ–°è²¨å¹£é¡¯ç¤º
	update_currency_display()

	# é¡¯ç¤ºç¬¬ä¸€å€‹æ¨™ç±¤çš„å…§å®¹
	if shop_tabs.size() > 0:
		switch_to_tab(shop_tabs[0]["id"])

# ==================== JSONé…ç½®è¼‰å…¥ ====================
func load_shop_tab_config():
	"""å¾JSONæ–‡ä»¶è¼‰å…¥å•†åŸæŒ‰éˆ•é…ç½®"""
	if not FileAccess.file_exists(SHOP_CONFIG_PATH):
		push_error("âš ï¸ æ‰¾ä¸åˆ°å•†åŸé…ç½®æ–‡ä»¶: " + SHOP_CONFIG_PATH)
		return

	var file = FileAccess.open(SHOP_CONFIG_PATH, FileAccess.READ)
	if file == null:
		push_error("âš ï¸ ç„¡æ³•æ‰“é–‹å•†åŸé…ç½®æ–‡ä»¶")
		return

	var json_text = file.get_as_text()
	file.close()

	var json = JSON.new()
	var error = json.parse(json_text)

	if error != OK:
		push_error("âš ï¸ è§£æå•†åŸé…ç½®JSONå¤±æ•—: " + json.get_error_message())
		return

	var data = json.data
	if not data.has("tabs"):
		push_error("âš ï¸ å•†åŸé…ç½®æ ¼å¼éŒ¯èª¤ï¼šç¼ºå°‘tabså­—æ®µ")
		return

	shop_tabs = data["tabs"]
	print("âœ… æˆåŠŸè¼‰å…¥ %d å€‹å•†åŸæŒ‰éˆ•é…ç½®" % shop_tabs.size())

func load_shop_items_config():
	"""å¾JSONæ–‡ä»¶è¼‰å…¥å•†åº—ç‰©å“é…ç½®"""
	if not FileAccess.file_exists(SHOP_ITEMS_PATH):
		push_error("âš ï¸ æ‰¾ä¸åˆ°å•†åº—ç‰©å“é…ç½®æ–‡ä»¶: " + SHOP_ITEMS_PATH)
		return

	var file = FileAccess.open(SHOP_ITEMS_PATH, FileAccess.READ)
	if file == null:
		push_error("âš ï¸ ç„¡æ³•æ‰“é–‹å•†åº—ç‰©å“é…ç½®æ–‡ä»¶")
		return

	var json_text = file.get_as_text()
	file.close()

	var json = JSON.new()
	var error = json.parse(json_text)

	if error != OK:
		push_error("âš ï¸ è§£æå•†åº—ç‰©å“é…ç½®JSONå¤±æ•—: " + json.get_error_message())
		return

	var data = json.data
	if not data.has("items"):
		push_error("âš ï¸ å•†åº—ç‰©å“é…ç½®æ ¼å¼éŒ¯èª¤ï¼šç¼ºå°‘itemså­—æ®µ")
		return

	shop_items = data["items"]

	# æŒ‰åˆ†é¡çµ„ç¹”ç‰©å“
	items_by_category.clear()
	for item in shop_items:
		var category = item.get("category", "items")
		if not items_by_category.has(category):
			items_by_category[category] = []
		items_by_category[category].append(item)

	print("âœ… æˆåŠŸè¼‰å…¥ %d å€‹å•†åº—ç‰©å“é…ç½®" % shop_items.size())

# ==================== æ›´æ–°é¡¯ç¤º ====================
func update_currency_display():
	"""æ›´æ–°ç©å®¶è²¨å¹£é¡¯ç¤º"""
	var gold = PlayerDataManager.get_gold()
	var gems = PlayerDataManager.get_diamond()

	gold_label.text = "ğŸ’° é‡‘å¹£: %d" % gold
	gem_label.text = "ğŸ’ å¯¶çŸ³: %d" % gems

# ==================== å‹•æ…‹å‰µå»ºå•†åŸæŒ‰éˆ• ====================
func create_tab_buttons():
	"""å‹•æ…‹å‰µå»ºå•†åŸæŒ‰éˆ•"""
	# æ¸…ç©ºç¾æœ‰æŒ‰éˆ•
	for child in tab_container.get_children():
		child.queue_free()

	tab_buttons.clear()

	# æ ¹æ“šé…ç½®å‰µå»ºæŒ‰éˆ•
	for tab_config in shop_tabs:
		var button = Button.new()
		button.custom_minimum_size = Vector2(150, 50)
		button.theme_type_variation = "Button"
		button.add_theme_font_size_override("font_size", 20)
		button.toggle_mode = true

		# è¨­ç½®æŒ‰éˆ•æ–‡å­—ï¼ˆåŒ…å«åœ–æ¨™ï¼‰
		var icon = tab_config.get("icon", "")
		var tab_name = tab_config.get("name", "")
		button.text = "%s %s" % [icon, tab_name]

		# é€£æ¥ä¿¡è™Ÿ
		var tab_id = tab_config.get("id", "")
		button.pressed.connect(_on_tab_pressed.bind(tab_id, tab_config))

		# æ·»åŠ åˆ°å®¹å™¨
		tab_container.add_child(button)
		tab_buttons[tab_id] = button

	print("âœ… æˆåŠŸå‰µå»º %d å€‹å•†åŸæŒ‰éˆ•" % tab_buttons.size())

func _on_tab_pressed(tab_id: String, tab_config: Dictionary):
	"""è™•ç†æŒ‰éˆ•é»æ“Š"""
	var tab_type = tab_config.get("type", "")

	match tab_type:
		"navigate":
			# å°èˆªåˆ°å…¶ä»–å ´æ™¯
			var action = tab_config.get("action", "")
			handle_navigation(action)
		"shop_items":
			# é¡¯ç¤ºå•†å“åˆ—è¡¨
			switch_to_tab(tab_id)

func handle_navigation(action: String):
	"""è™•ç†å ´æ™¯å°èˆª"""
	match action:
		"goto_gacha":
			print("ğŸ° å‰å¾€æŠ½å¡ç³»çµ±")
			GameManager.goto_gacha()
		_:
			print("âš ï¸ æœªçŸ¥çš„å°èˆªå‹•ä½œ: " + action)

# ==================== ç¦®åŒ…æ‡¸åœæç¤º ====================
var hover_tooltip: PanelContainer = null

func _on_gift_pack_hover(_panel: PanelContainer, item_data: Dictionary):
	"""ç¦®åŒ…æ‡¸åœæ™‚é¡¯ç¤ºè©³ç´°å…§å®¹"""
	if hover_tooltip:
		hover_tooltip.queue_free()

	# å‰µå»ºæ‡¸åœæç¤ºæ¡†
	hover_tooltip = PanelContainer.new()
	hover_tooltip.z_index = 100

	# è¨­ç½®æ¨£å¼
	var style_box = StyleBoxFlat.new()
	style_box.bg_color = Color(0.1, 0.1, 0.15, 0.95)
	style_box.border_width_left = 2
	style_box.border_width_top = 2
	style_box.border_width_right = 2
	style_box.border_width_bottom = 2
	style_box.border_color = Color(0.6, 0.6, 0.8, 1)
	style_box.corner_radius_top_left = 8
	style_box.corner_radius_top_right = 8
	style_box.corner_radius_bottom_left = 8
	style_box.corner_radius_bottom_right = 8
	hover_tooltip.add_theme_stylebox_override("panel", style_box)

	var vbox = VBoxContainer.new()
	vbox.add_theme_constant_override("separation", 5)
	hover_tooltip.add_child(vbox)

	# æ¨™é¡Œ
	var title_label = Label.new()
	title_label.text = "ğŸ“¦ ç¦®åŒ…å…§å®¹"
	title_label.add_theme_font_size_override("font_size", 18)
	title_label.add_theme_color_override("font_color", Color(1, 0.9, 0.3, 1))
	vbox.add_child(title_label)

	# çå‹µåˆ—è¡¨
	var reward_config = item_data.get("reward_config", {})
	var rewards = reward_config.get("rewards", [])

	for reward in rewards:
		var reward_label = Label.new()
		var reward_text = get_reward_display_text(reward)
		reward_label.text = "  â€¢ " + reward_text
		reward_label.add_theme_font_size_override("font_size", 16)
		vbox.add_child(reward_label)

	# è³¼è²·é™åˆ¶
	var purchase_limit = item_data.get("purchase_limit", 0)
	if purchase_limit > 0:
		var limit_label = Label.new()
		limit_label.text = "\né™è³¼: %d æ¬¡" % purchase_limit
		limit_label.add_theme_font_size_override("font_size", 14)
		limit_label.add_theme_color_override("font_color", Color(1, 0.5, 0.5, 1))
		vbox.add_child(limit_label)

	# æ·»åŠ åˆ°å ´æ™¯
	add_child(hover_tooltip)

	# è¨ˆç®—ä½ç½®ï¼ˆåœ¨æ»‘é¼ æ—é‚Šï¼‰
	await get_tree().process_frame
	var mouse_pos = get_viewport().get_mouse_position()
	hover_tooltip.global_position = mouse_pos + Vector2(20, 20)

func _on_gift_pack_hover_end(_panel: PanelContainer):
	"""ç¦®åŒ…æ‡¸åœçµæŸ"""
	if hover_tooltip:
		hover_tooltip.queue_free()
		hover_tooltip = null

func get_reward_display_text(reward: Dictionary) -> String:
	"""ç²å–çå‹µé¡¯ç¤ºæ–‡å­—"""
	var reward_type = reward.get("type", "")

	match reward_type:
		"currency":
			var currency_type = reward.get("currency_type", "gold")
			var amount = reward.get("amount", 0)
			if currency_type == "gold":
				return "ğŸ’° é‡‘å¹£ x%d" % amount
			elif currency_type == "gem":
				return "ğŸ’ é‘½çŸ³ x%d" % amount

		"bag_expansion":
			var slots = reward.get("slots", 5)
			return "ğŸ’ èƒŒåŒ…æ“´å…… +%d æ ¼" % slots

		"specific_card":
			var card_id = reward.get("card_id", "")
			var count = reward.get("count", 1)
			return "ğŸƒ å¡ç‰‡ %s x%d" % [card_id, count]

		_:
			return "â“ æœªçŸ¥çå‹µ"

	return ""

func switch_to_tab(tab_id: String):
	"""åˆ‡æ›åˆ°æŒ‡å®šæ¨™ç±¤"""
	current_tab = tab_id
	update_tab_buttons()
	create_shop_items()

func update_tab_buttons():
	"""æ›´æ–°æ¨™ç±¤æŒ‰éˆ•ç‹€æ…‹"""
	for tab_id in tab_buttons:
		var button = tab_buttons[tab_id]
		button.button_pressed = (tab_id == current_tab)

# ==================== å‰µå»ºå•†åº—ç‰©å“ ====================
func create_shop_items():
	"""æ ¹æ“šç•¶å‰æ¨™ç±¤å‰µå»ºå•†åº—ç‰©å“"""
	# æ¸…ç©ºç¾æœ‰ç‰©å“
	for child in shop_items_grid.get_children():
		child.queue_free()

	# ç²å–ç•¶å‰åˆ†é¡çš„ç‰©å“
	var current_items = items_by_category.get(current_tab, [])

	if current_items.size() == 0:
		# é¡¯ç¤ºç©ºæç¤º
		var empty_label = Label.new()
		empty_label.text = "æ­¤åˆ†é¡æš«ç„¡å•†å“"
		empty_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		empty_label.add_theme_font_size_override("font_size", 24)
		shop_items_grid.add_child(empty_label)
		return

	# å‹•æ…‹èª¿æ•´åˆ—æ•¸ï¼ˆæ ¹æ“šå¯ç”¨å¯¬åº¦ï¼‰
	# æ¯å€‹å•†å“å¡ç‰‡å¯¬åº¦ç´„ 250ï¼Œé–“è· 30
	await get_tree().process_frame  # ç­‰å¾…ä½ˆå±€æ›´æ–°
	var available_width = shop_items_grid.size.x
	if available_width > 0:
		var item_width = 250
		var spacing = 15
		var columns = max(1, int(available_width / (item_width + spacing)))
		shop_items_grid.columns = columns
		print("ğŸ”§ èª¿æ•´å•†åº—åˆ—æ•¸ç‚º: %d (å¯ç”¨å¯¬åº¦: %d)" % [columns, available_width])

	# å‹•æ…‹å‰µå»ºå•†åº—ç‰©å“UI
	for item_data in current_items:
		var item_node = create_shop_item_ui(item_data)
		shop_items_grid.add_child(item_node)

func create_shop_item_ui(item_data: Dictionary) -> Control:
	"""å‰µå»ºå–®å€‹å•†åº—ç‰©å“çš„UI"""
	var item_panel = PanelContainer.new()
	item_panel.custom_minimum_size = Vector2(230, 300)

	var vbox = VBoxContainer.new()
	vbox.add_theme_constant_override("separation", 8)
	item_panel.add_child(vbox)

	# ç‰©å“åœ–æ¨™ï¼ˆä½”ä½ç¬¦ï¼‰
	var icon_rect = ColorRect.new()
	icon_rect.custom_minimum_size = Vector2(210, 150)
	icon_rect.color = Color(0.3, 0.3, 0.4, 0.5)
	vbox.add_child(icon_rect)

	# ç‰©å“åç¨±
	var item_name_label = Label.new()
	item_name_label.text = item_data.get("name", "æœªå‘½åç‰©å“")
	item_name_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	item_name_label.add_theme_font_size_override("font_size", 18)
	vbox.add_child(item_name_label)

	# æª¢æŸ¥æ˜¯å¦ç‚ºç¦®åŒ…
	var is_gift_pack = item_data.get("category", "") == "gift_packs"

	# ç‰©å“æè¿°ï¼ˆç¦®åŒ…ä¸é¡¯ç¤ºï¼Œå…¶ä»–å•†å“é¡¯ç¤ºï¼‰
	if not is_gift_pack:
		var desc_label = Label.new()
		desc_label.text = item_data.get("description", "")
		desc_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		desc_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART
		desc_label.custom_minimum_size = Vector2(210, 40)
		desc_label.add_theme_font_size_override("font_size", 14)
		vbox.add_child(desc_label)

	# åƒ¹æ ¼æ¨™ç±¤
	var price_label = Label.new()
	var price = item_data.get("price", 0)
	var currency = item_data.get("currency", "gold")
	var currency_icon = "ğŸ’°" if currency == "gold" else "ğŸ’"
	price_label.text = "%s %d" % [currency_icon, price]
	price_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	price_label.add_theme_font_size_override("font_size", 20)
	vbox.add_child(price_label)

	# âœ… æª¢æŸ¥è³¼è²·é™åˆ¶
	var purchase_limit = item_data.get("purchase_limit", 0)
	var item_id = item_data.get("id", "")
	var purchase_count = PlayerDataManager.get_shop_purchase_count(item_id)
	var can_purchase = PlayerDataManager.can_purchase_item(item_id, purchase_limit)

	# è³¼è²·æŒ‰éˆ•
	var buy_button = Button.new()
	buy_button.custom_minimum_size = Vector2(0, 40)

	# âœ… æ ¹æ“šè³¼è²·é™åˆ¶æ›´æ–°æŒ‰éˆ•ç‹€æ…‹
	if purchase_limit > 0:
		# æœ‰è³¼è²·é™åˆ¶çš„å•†å“
		if can_purchase:
			buy_button.text = "è³¼è²· (%d/%d)" % [purchase_count, purchase_limit]
			buy_button.disabled = false
			buy_button.pressed.connect(_on_buy_item.bind(item_data))
		else:
			buy_button.text = "å·²é”ä¸Šé™"
			buy_button.disabled = true
			buy_button.modulate = Color(0.6, 0.6, 0.6)
	else:
		# ç„¡é™è³¼è²·çš„å•†å“
		buy_button.text = "è³¼è²·"
		buy_button.disabled = false
		buy_button.pressed.connect(_on_buy_item.bind(item_data))

	vbox.add_child(buy_button)

	# ç¦®åŒ…ç‰¹æ®Šè™•ç†ï¼šæ·»åŠ æ‡¸åœæç¤º
	if is_gift_pack:
		item_panel.mouse_entered.connect(_on_gift_pack_hover.bind(item_panel, item_data))
		item_panel.mouse_exited.connect(_on_gift_pack_hover_end.bind(item_panel))
		item_panel.mouse_filter = Control.MOUSE_FILTER_PASS

	return item_panel

# ==================== è³¼è²·é‚è¼¯ ====================
func _on_buy_item(item_data: Dictionary):
	"""è™•ç†è³¼è²·ç‰©å“"""
	var item_id = item_data.get("id", "")
	var price = item_data.get("price", 0)
	var currency = item_data.get("currency", "gold")
	var item_name = item_data.get("name", "ç‰©å“")
	var purchase_limit = item_data.get("purchase_limit", 0)

	print("è³¼è²·ç‰©å“: %s, åƒ¹æ ¼: %d %s" % [item_id, price, currency])

	# âœ… æª¢æŸ¥è³¼è²·é™åˆ¶
	if not PlayerDataManager.can_purchase_item(item_id, purchase_limit):
		show_notification("âŒ å·²é”è³¼è²·ä¸Šé™ï¼")
		return

	# æª¢æŸ¥ä¸¦æ‰£é™¤è²¨å¹£
	var success = false
	if currency == "gold":
		if PlayerDataManager.get_gold() >= price:
			success = PlayerDataManager.spend_gold(price)
		else:
			show_notification("âŒ é‡‘å¹£ä¸è¶³ï¼")
			return
	elif currency == "gem":
		if PlayerDataManager.get_diamond() >= price:
			success = PlayerDataManager.spend_diamond(price)
		else:
			show_notification("âŒ å¯¶çŸ³ä¸è¶³ï¼")
			return

	if success:
		# âœ… è¨˜éŒ„è³¼è²·
		PlayerDataManager.record_shop_purchase(item_id)

		# ç™¼æ”¾ç‰©å“
		give_item(item_data)

		# âœ… åˆ·æ–°å•†åº—UIï¼ˆæ›´æ–°è³¼è²·æ¬¡æ•¸é¡¯ç¤ºï¼‰
		create_shop_items()

		# æ›´æ–°é¡¯ç¤º
		update_currency_display()

		# é¡¯ç¤ºæˆåŠŸè¨Šæ¯
		var purchase_count = PlayerDataManager.get_shop_purchase_count(item_id)
		if purchase_limit > 0:
			show_notification("âœ… è³¼è²·æˆåŠŸï¼š%s (%d/%d)" % [item_name, purchase_count, purchase_limit])
		else:
			show_notification("âœ… è³¼è²·æˆåŠŸï¼š%s" % item_name)
	else:
		show_notification("âŒ è³¼è²·å¤±æ•—ï¼")

func give_item(item_data: Dictionary):
	"""ç™¼æ”¾è³¼è²·çš„ç‰©å“"""
	var reward_type = item_data.get("reward_type", "")
	var reward_config = item_data.get("reward_config", {})
	var item_name = item_data.get("name", "ç‰©å“")

	match reward_type:
		"random_cards":
			# çµ¦äºˆéš¨æ©Ÿå¡ç‰‡
			var count = reward_config.get("count", 1)
			var rarities = reward_config.get("rarities", [])
			var rarity_enums = convert_rarity_strings_to_enums(rarities)

			for i in range(count):
				var card_id = get_random_card_by_rarity(rarity_enums)
				PlayerDataManager.add_card(card_id)
			print("âœ… ç²å¾— %s x%d" % [item_name, count])

		"guaranteed_legendary":
			# çµ¦äºˆä¿åº•å‚³èªªçš„å¡åŒ…
			var count = reward_config.get("count", 10)
			var guaranteed = reward_config.get("guaranteed_legendary", 1)
			var other_rarities = reward_config.get("other_rarities", [])
			var rarity_enums = convert_rarity_strings_to_enums(other_rarities)

			# å…ˆçµ¦éä¿åº•çš„å¡ç‰‡
			for i in range(count - guaranteed):
				var card_id = get_random_card_by_rarity(rarity_enums)
				PlayerDataManager.add_card(card_id)

			# çµ¦ä¿åº•å‚³èªªå¡ç‰‡
			for i in range(guaranteed):
				var legendary_card = get_random_card_by_rarity([Constants.CardRarity.LEGENDARY])
				PlayerDataManager.add_card(legendary_card)

			print("âœ… ç²å¾— %s x%dï¼ˆå«%då¼µå‚³èªªï¼‰" % [item_name, count, guaranteed])

		"specific_card":
			# çµ¦äºˆæŒ‡å®šå¡ç‰‡
			var card_id = reward_config.get("card_id", "")
			var count = reward_config.get("count", 1)
			for i in range(count):
				PlayerDataManager.add_card(card_id)
			print("âœ… ç²å¾—æŒ‡å®šå¡ç‰‡: %s x%d" % [card_id, count])

		"item":
			# çµ¦äºˆé“å…·ï¼ˆTODO: éœ€è¦å¯¦ç¾é“å…·ç³»çµ±ï¼‰
			var item_type = reward_config.get("item_type", "")
			var count = reward_config.get("count", 1)
			print("âœ… ç²å¾—é“å…·: %s x%dï¼ˆæš«æœªå¯¦ç¾ï¼‰" % [item_type, count])

		"currency":
			# çµ¦äºˆè²¨å¹£
			var currency_type = reward_config.get("currency_type", "gold")
			var amount = reward_config.get("amount", 0)
			if currency_type == "gold":
				PlayerDataManager.add_gold(amount)
				print("âœ… ç²å¾—é‡‘å¹£: %d" % amount)
			elif currency_type == "gem":
				PlayerDataManager.add_diamond(amount)
				print("âœ… ç²å¾—å¯¶çŸ³: %d" % amount)

		"bundle":
			# çµ¦äºˆç¦®åŒ…ï¼ˆåŒ…å«å¤šç¨®çå‹µï¼‰
			var rewards = reward_config.get("rewards", [])
			print("ğŸ é–‹å•Ÿç¦®åŒ…: %s" % item_name)
			for reward in rewards:
				give_bundle_reward(reward)
			print("âœ… ç¦®åŒ… %s ç™¼æ”¾å®Œæˆï¼" % item_name)

	PlayerDataManager.save_data()

func convert_rarity_strings_to_enums(rarity_strings: Array) -> Array:
	"""å°‡ç¨€æœ‰åº¦å­—ç¬¦ä¸²æ•¸çµ„è½‰æ›ç‚ºæšèˆ‰æ•¸çµ„"""
	var result = []
	for rarity_str in rarity_strings:
		match rarity_str:
			"LEGENDARY":
				result.append(Constants.CardRarity.LEGENDARY)
			"EPIC":
				result.append(Constants.CardRarity.EPIC)
			"RARE":
				result.append(Constants.CardRarity.RARE)
			"COMMON":
				result.append(Constants.CardRarity.COMMON)
	return result

func get_random_card_by_rarity(_rarities: Array) -> String:
	"""æ ¹æ“šç¨€æœ‰åº¦ç²å–éš¨æ©Ÿå¡ç‰‡ID"""
	# TODO: å¯¦éš›å¾ DataManager ç²å–æŒ‡å®šç¨€æœ‰åº¦çš„å¡ç‰‡
	# æš«æ™‚è¿”å›é è¨­å¡ç‰‡
	var card_ids = ["002", "002", "002", "002", "002"]
	return card_ids[randi() % card_ids.size()]

func give_bundle_reward(reward: Dictionary):
	"""ç™¼æ”¾ç¦®åŒ…ä¸­çš„å–®å€‹çå‹µ"""
	var reward_type = reward.get("type", "")

	match reward_type:
		"currency":
			# è²¨å¹£çå‹µ
			var currency_type = reward.get("currency_type", "gold")
			var amount = reward.get("amount", 0)
			if currency_type == "gold":
				PlayerDataManager.add_gold(amount)
				print("  ğŸ’° ç²å¾—é‡‘å¹£: %d" % amount)
			elif currency_type == "gem":
				PlayerDataManager.add_diamond(amount)
				print("  ğŸ’ ç²å¾—é‘½çŸ³: %d" % amount)

		"bag_expansion":
			# èƒŒåŒ…æ“´å……ï¼ˆå…è²»ï¼‰
			var slots = reward.get("slots", 5)
			PlayerDataManager.expand_bag(slots, 0)  # å…è²»æ“´å……
			print("  ğŸ’ èƒŒåŒ…æ“´å……: +%d æ ¼" % slots)

		"specific_card":
			# æŒ‡å®šå¡ç‰‡
			var card_id = reward.get("card_id", "")
			var count = reward.get("count", 1)
			for i in range(count):
				PlayerDataManager.add_card(card_id)
			print("  ğŸƒ ç²å¾—å¡ç‰‡: %s x%d" % [card_id, count])

		_:
			print("  âš ï¸ æœªçŸ¥çš„çå‹µé¡å‹: %s" % reward_type)

func show_notification(message: String):
	"""é¡¯ç¤ºé€šçŸ¥è¨Šæ¯"""
	# TODO: å‰µå»ºæ›´å¥½çš„é€šçŸ¥UI
	print(message)

# ==================== è¼¸å…¥è™•ç† ====================

func _input(event: InputEvent):
	"""è™•ç† ESC éµè¿”å›"""
	if event.is_action_pressed("ui_cancel"):  # ESC éµ
		_on_back_pressed()

# ==================== æŒ‰éˆ•å›èª¿ ====================
func _on_back_pressed():
	"""è¿”å›ä¸»é¸å–®"""
	print("â† è¿”å›ä¸»é¸å–®")
	GameManager.goto_main_menu()
